[package]
name = "encryption"
version = "0.1.0"
edition = "2018"

[dependencies]
image = "0.23.14"
steganography = "*"
rand = "0.8.5"

# Define the encryption crate as a library
[lib]
name = "encryption"
path = "src/lib.rs"

# Define binaries for encode and decode
[[bin]]
name = "encode"
path = "src/encode.rs"

[[bin]]
name = "decode"
path = "src/decode.rs"
